[project]
name = "ComfyUI-DyPE"
description = "DyPE. Artifact-free 4K+ image generation. Qwen, Flux, Nunchacku"
version = "2.1.0"
license = {file = "LICENSE"}
dependencies = ["torch"]

[project.urls]
Repository = "https://github.com/wildminder/ComfyUI-DyPE"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "wildai"
DisplayName = "ComfyUI-DyPE"
Icon = ""
